--- a/bibliography.bib
+++ b/bibliography.bib
@@ -281,7 +281,6 @@
 	author={{RT-55J}},
 	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/RT-55J}
-<<<<<<< HEAD
 }
 
 @online{wiki:sigma_stages,
@@ -320,6 +319,8 @@
 	url={https://mmxrta.fandom.com/wiki/Basics}
 }
 
-=======
+@online{wiki:damage_chart_X1,
+	author={{Mega Man X1 Damage Data Chart}},
+	title={{Mega Man X RTA Wiki}},
+	url={https://megaman.fandom.com/wiki/Mega_Man_X1_Damage_Data_Chart}
 }
->>>>>>> 8fbb191aa7a4db2c0b8b92aaf47c931676d899b9
