--- a/src/enemies.tex
+++ b/src/enemies.tex
@@ -1,9 +1,8 @@
 %enemies.tex
 \section{Mini-Bosses}
 	\begin{itemize}
-<<<<<<< HEAD
 		\item \hypertarget{miniboss:Anglerge}{\textbf{Anglerge}}:
-		Anglerge are angler-type mechaniloids that work to cleaning the seabed floor, with a  a motion sensor attached to its "lantern" part \cite{wayback:X_resources}. Anglerge's attack are only four: send four snake-like robots toward X (two upward and two downward), which travel horizontally and descend when above (or below) X; a vacuum attack to push or pull X toward a spike pit; a (rare) energy beam from the angler (which can be disabled if the lamp is broken via an attack).
+		Anglerge are angler-type mechaniloids that work to cleaning the seabed floor, with a  a motion sensor attached to its "lantern" part ~\cite{wayback:X_resources}. Anglerge's attack are only four: send four snake-like robots toward X (two upward and two downward), which travel horizontally and descend when above (or below) X; a vacuum attack to push or pull X toward a spike pit; a (rare) energy beam from the angler (which can be disabled if the lamp is broken via an attack).
 		\begin{figure}[htp]
 			\centering
 			\includegraphics[width=0.5\linewidth]{figures/X1/enemies/Anglerge.jpg}
@@ -11,7 +10,7 @@
 		\end{figure}
 	
 		\item \hypertarget{miniboss:Bee_Blader}{\textbf{Bee Blader}}:
-		A large bee-type helicopter which was created in order to carry Ball de Voux. It is equipped with a vulcan machine-gun and homing missiles. This mechaniloid has been created for guerrilla operations in forests and cities \cite{wayback:X_resources}. While they don't appears formidable enemies, they can be rather dangerous, especially if X defeats them while standing below, as they will fall and crush him instantly.
+		A large bee-type helicopter which was created in order to carry Ball de Voux. It is equipped with a vulcan machine-gun and homing missiles. This mechaniloid has been created for guerrilla operations in forests and cities~\cite{wayback:X_resources}. While they don't appears formidable enemies, they can be rather dangerous, especially if X defeats them while standing below, as they will fall and crush him instantly.
 		\begin{figure}[htp]
 			\centering
 			\includegraphics[width=0.6\linewidth]{figures/X1/enemies/BeeBlader.jpg}
@@ -19,7 +18,7 @@
 		\end{figure}
 	
 		\item%[\includegraphics{figures/X1/enemies/MMXCruizilerSprite.png}]
-		 \hypertarget{enem:Cruiziler}{\textbf{Cruiziler}}: Whale mechaniloid who patrols the sea with its powerful weapon. Some kind of mistake caused it to lose its sea navigation, its attack circuits began running wild, and communications were lost \cite{wayback:X_resources}. Its body is totally invincible, save for its core on top.
+		 \hypertarget{enem:Cruiziler}{\textbf{Cruiziler}}: Whale mechaniloid who patrols the sea with its powerful weapon. Some kind of mistake caused it to lose its sea navigation, its attack circuits began running wild, and communications were lost~\cite{wayback:X_resources}. Its body is totally invincible, save for its core on top.
 		\begin{figure}[htp]
 			\centering
 			\includegraphics[width=0.6\linewidth]{figures/X1/enemies/Cruiziller.jpg}
@@ -28,58 +27,48 @@
 	
 		\item \hypertarget{miniboss:Mole_Borer}{\textbf{Mole Borer}}:
 		Mechaniroid used to open up paths in mines, using a 
-		rotary roller to destroy rocks that obstacle his path\cite{wayback:X_resources}. Its armoring can take a lot of damage, while the roller is completely invincible and can instantly kill X.
+		rotary roller to destroy rocks that obstacle his path~\cite{wayback:X_resources}. Its armoring can take a lot of damage, while the roller is completely invincible and can instantly kill X.
 		\begin{figure}[htp]
 			\centering
 			\includegraphics[width=0.4\linewidth]{figures/X1/enemies/MoleBorer.jpg}
 			\caption{Mole Borer's artwork}
 		\end{figure}
 	
-		\item \hypertarget{miniboss:RT-55J}{\textbf{RT-55J}}: In times of peace, it was a professional robot sumo wrestler and a popular Yokozuna (sumo grand champion) in the "Robot Grand Sumo Tournament". In the forest, it now guard X's  Chest Parts\cite{wayback:X_resources}. Its certain kill technique, the "Kagizume Beam Hand," strikes and tosses its opponents but only if it is in his claw's reach range. Otherwise he'll just jump at it to close the gap.
+		\item \hypertarget{miniboss:RT-55J}{\textbf{RT-55J}}: In times of peace, it was a professional robot sumo wrestler and a popular Yokozuna (sumo grand champion) in the "Robot Grand Sumo Tournament". In the forest, it now guard X's  Chest Parts~\cite{wayback:X_resources}. Its certain kill technique, the "Kagizume Beam Hand," strikes and tosses its opponents but only if it is in his claw's reach range. Otherwise he'll just jump at it to close the gap.
 		\begin{figure}[htp]
 			\centering
 			\includegraphics[width=0.4\linewidth]{figures/X1/enemies/RT-55J.jpg}
 			\caption{RT-55J's artwork}
 		\end{figure}
 	
-		\item \hypertarget{miniboss:Thunder_Slimer}{\textbf{Thunder Slimer}}: Thunder Slimer was born from a single question: ``How large can a single cell become?'' This monster was born from said experiment. Its body is over three times as large as X, but may require approximately 10 years before it reaches full growth \cite{wayback:X_resources}. It has settled in the power plant, where he absorb electricity and use it to perform electric attack against X.
+		\item \hypertarget{miniboss:Thunder_Slimer}{\textbf{Thunder Slimer}}: Thunder Slimer was born from a single question: ``How large can a single cell become?'' This monster was born from said experiment. Its body is over three times as large as X, but may require approximately 10 years before it reaches full growth~\cite{wayback:X_resources}. It has settled in the power plant, where he absorb electricity and use it to perform electric attack against X.
 		\begin{figure}[htp]
 			\centering
 			\includegraphics[width=0.4\linewidth]{figures/X1/enemies/ThunderSlimer.jpg}
 			\caption{Thunder Slimer's artwork}
 		\end{figure}
 	
-		\item \hypertarget{miniboss:Utuboros}{\textbf{Utuboros}}: Serpent-type mechaniloid made to explore the ocean floor. Thanks to its flexible body it can zig-zag into difficult underwater areas, and burrow underground \cite{wayback:X_resources}. His body is totally invincible and can work as a platform, while only the head and tail are vulnerable and can damage X.
+		\item \hypertarget{miniboss:Utuboros}{\textbf{Utuboros}}: Serpent-type mechaniloid made to explore the ocean floor. Thanks to its flexible body it can zig-zag into difficult underwater areas, and burrow underground ~\cite{wayback:X_resources}. His body is totally invincible and can work as a platform, while only the head and tail are vulnerable and can damage X.
 		\begin{figure}[htp]
 			\centering
 			\includegraphics[width=0.5\linewidth]{figures/X1/enemies/Utuboros.jpg}
 			\caption{Utuboros's artwork}
 		\end{figure}
-		
-=======
-		\item \hypertarget{miniboss:Anglerge}{Anglerge}
-		\item \hypertarget{miniboss:Bee_Blader}{Bee Blader}
-		\item \hypertarget{miniboss:Mole_Borer}{Mole Borer}
-		\item \hypertarget{miniboss:RT-55J}{RT-55J}
-		\item \hypertarget{miniboss:Thunder_Slimer}{Thunder Slimer}
-		\item \hypertarget{miniboss:Utuboros}{Utuboros}
->>>>>>> 8fbb191aa7a4db2c0b8b92aaf47c931676d899b9
 	\end{itemize}
 
 \section{Minor enemies}
 \begin{itemize}
-<<<<<<< HEAD
 	\item[{\includegraphics{figures/X1/enemies/sprite_amenhopper.png}}] \hypertarget{enem:Amenhopper}{\textbf{Amenhopper}}:
 	Originally designed for farm work, it was used to sow fertilizer 
 	across the land. Now, it's been remodeled into a bomb-dropping
 	battle type mechaniloid.
 	
-	\item[ {\includegraphics[height=20px]{figures/X1/enemies/sprite_armor_soldier.png}}] \hypertarget{enem:Armor_Soldier}{\textbf{Armor Soldier}}: Lowest class of soldier reploids, used in military affairs. Riding in their Ride Armor, they do destruction work Under Sigma's orders.
+	\item[ {\includegraphics[height=20px]{figures/X1/enemies/sprite_armor_soldier.png}}] \hypertarget{enem:Armor_Soldier}{\textbf{Armor Soldier}}: Lowest class of soldier reploids, used in military affairs. Riding in their Ride Armor, they do destruction work under Sigma's orders.
 	
-	\item[{\includegraphics[width=30px]{figures/X1/enemies/sprite_axemax.png}}] \hypertarget{enem:Axe_Max}{\textbf{Axe Max}}:Woodcutter reploid from the forest, remodeled for brutality. Swinging his large axe, he attacks by sending the chopped wood flying.
+	\item[{\includegraphics[width=30px]{figures/X1/enemies/sprite_axemax.png}}] \hypertarget{enem:Axe_Max}{\textbf{Axe Max}}: Woodcutter reploid from the forest, remodeled for brutality. Swinging his large axe, he attacks by sending the chopped wood flying.
 	
 	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_balldevoux.png}}] \hypertarget{enem:Ball_De_Voux}{\textbf{Ball De Voux}}: With 2 soft-treading feet, this mecha can move over any topography.
-	In part of the sphere, there is a camera and a sensor which can even see in the dark.
+	Inside the sphere there is a camera and a sensor which can even see in the dark.
 	
 	\item[{\includegraphics{figures/X1/enemies/sprite_battonbone.png}}] \hypertarget{enem:Batton_Bone}{\textbf{Batton Bone}}: Bat mechaniloids with a taste for humans. They dwell in forests and caves.
 	
@@ -87,11 +76,11 @@
 	
 	\item[{\includegraphics{figures/X1/enemies/sprite_bombeen.png}}]\hypertarget{enem:Bomb_Been}{\textbf{Bomb Been}}: Small bee-modeled helicopter used for scattering land mines. Able to infiltrate any area, it can set up land mines anywhere.
 	
-	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_cragman.png}}] \hypertarget{enem:Crag_Man} {\textbf{Crag Man}}: Crag Men are made to clear rock debris during landslides. They works actively with the aerial mechanilid Sky Claw.
+	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_cragman.png}}] \hypertarget{enem:Crag_Man} {\textbf{Crag Man}}: Crag Men were made to clear rock debris during landslides. They works actively with the aerial mechanilid Sky Claw.
 	
 	\item[{\includegraphics[height=10px]{figures/X1/enemies/sprite_creeper.png}}] \hypertarget{enem:Creeper} {\textbf{Creeper}}: An insect-type mechaniloid. It's unknown what it was made for.	It is pecked out from the insides of trees by the Mad Pecker.
 	
-	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_crusher.png}}] \hypertarget{enem:Crusher}{\textbf{Crusher}}: Construction mechaniloid for knocking down buildings. It drops its steel-made weight to scrape down the highway.
+	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_crusher.png}}] \hypertarget{enem:Crusher}{\textbf{Crusher}}: Construction mechaniloid used for knocking down buildings. It drops its steel-made weight to scrape down the highway.
 	
 	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_diglabour.png}}] \hypertarget{enem:Dig_Labour}{\textbf{Dig Labour}}: The greatest pickaxe worker in the world. He is a diligent reploid who works in the robot factory.
 	
@@ -109,21 +98,21 @@
 	
 	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_hotarion.png}}] \hypertarget{enem:Hotarion}{\textbf{Hotarion}}: A mechaniloid for nighttime patrol, it was made to save the firefly appearance from extinction. Shining, it flies through the sky.
 	
-	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_jamminger.png}}] \hypertarget{enem:Jamminger}{\textbf{Jamminger}}: Mechaniloid that attacks any enemies who enter a forbidden. An odd robot who laughs after attacking.
+	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_jamminger.png}}] \hypertarget{enem:Jamminger}{\textbf{Jamminger}}: Mechaniloid that attacks any enemies who enter a forbidden area. An odd robot who laughs after attacking.
 		
 	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_ladderyadder.png}}] \hypertarget{enem:Ladder_Yadder}{\textbf{Ladder Yadder}}: Originally a mechaniloid supervisor of the forest regions. It would locate any poachers, and report the forest's temperature and humidity to the woodland protection center.
 	
-	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_liftcannon.png}}] \hypertarget{enem:Lift Cannon}{\textbf{Lift Cannon}}: Rotary-type cannon attached to a a tube-like stand. Originally, a fire-fighting robot for the control towers and any other high places in the airport.
+	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_liftcannon.png}}] \hypertarget{enem:Lift Cannon}{\textbf{Lift Cannon}}: Rotary-type cannon attached to a a tube-like stand. Originally, a fire-fighting robot for control towers and any other high places in the airport.
 	
-	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_madpecker.png}}] \hypertarget{enem:Mad_Pecker}{\textbf{Mad Pecker}}: Woodpecker type repliroid who chops trees in the forest. Tries to follow Planty, without success.
+	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_madpecker.png}}] \hypertarget{enem:Mad_Pecker}{\textbf{Mad Pecker}}: Woodpecker-type repliroid who chops trees in the forest. Tries to follow Planty, without success.
 	
-	\item[{\includegraphics[width=30px]{figures/X1/enemies/sprite_megatortoise.png}}] \hypertarget{enem:Mega_Tortoise}{\textbf{Mega Tortoise}}: A turtle type mechaniloid originally meant for rescuing humans from maritime disasters. From its back, it now produces bombs in place of floating devices.
+	\item[{\includegraphics[width=30px]{figures/X1/enemies/sprite_megatortoise.png}}] \hypertarget{enem:Mega_Tortoise}{\textbf{Mega Tortoise}}: A turtle-type mechaniloid originally meant for rescuing humans from maritime disasters. From its back, it now produces bombs in place of floating devices.
 	
-	\item[{\includegraphics{figures/X1/enemies/sprite_metalwing.png}}] \hypertarget{enem:Metal_Wing}{\textbf{Metal Wing}}: A reconnaissance mechaniloid. When it spots dangers, it raises its flying speed in a great rush to get the news	to its master.
+	\item[{\includegraphics{figures/X1/enemies/sprite_metalwing.png}}] \hypertarget{enem:Metal_Wing}{\textbf{Metal Wing}}: A reconnaissance mechaniloid. When it spots dangers, it raises its flying speed in a great rush to get news to its master.
 	
 	\item[{\includegraphics{figures/X1/enemies/sprite_mettalc15.png}}] \hypertarget{enem:Metall_C-15}{\textbf{Metall C-15}}: Reploid who watches factories. From the former series that worked in factories, now they are advanced enough to be placed as chiefs.
 	
-	\item[{\includegraphics{figures/X1/enemies/sprite_planty.png}}] \hypertarget{enem:Planty_Iworms} {\textbf{Planty\&Iworms}}: Planty is from the Mettool family and watches over the forest. From its head, it can manufacture the earthworm type soil cultivation reploid, Iworm.
+	\item[{\includegraphics{figures/X1/enemies/sprite_planty.png}}] \hypertarget{enem:Planty_Iworms} {\textbf{Planty\&Iworms}}: Planty is from the Mettool family and watches over the forest. From its head, it can manufacture the earthworm-type, soil cultivation reploid, Iworm.
 	
 	\item[{\includegraphics{figures/X1/enemies/sprite_raybit.png}}] \hypertarget{enem:Ray_Bit}{\textbf{Ray Bit}}: Rabbit-type mechaniloid taken from the robot zoo. It skips and jumps, using the laser cannon in its ears to attack.
 	
@@ -131,15 +120,15 @@
 		
 	\item[{\includegraphics[width=30px]{figures/X1/enemies/sprite_roadattacker.png}}] \hypertarget{enem:Road_Attackers}{\textbf{Road Attackers}}: A destructive reploid gang of hot-rodders, riding for Sigma's rebellion. Large beam cannons have been attached to the bonnets of their sports cars.
 	
-	\item[{\includegraphics{figures/X1/enemies/sprite_rollinggabyoall.png}}] \hypertarget{enem:Rolling_Gabyoall}{\textbf{Rolling Gabyoall}}: Intruder repulsion robot. Appears to be a simple mechaniloid, but truthfully, it possesses the human-like mind of a reploid.
+	\item[{\includegraphics{figures/X1/enemies/sprite_rollinggabyoall.png}}] \hypertarget{enem:Rolling_Gabyoall}{\textbf{Rolling Gabyoall}}: Intruder repulsion robot. It Appears to be a simple mechaniloid, but truthfully, it possesses the human-like mind of a reploid.
 	
-	\item[{\includegraphics{figures/X1/enemies/sprite_rushroader.png}}] \hypertarget{enem:Rush_Roader}{\textbf{Rush Roader}}: Leaders of the robot gang of hot-rodders. To get revenge on the Maverick Hunters who once chased them down, they became a subordinate of Sigma.
+	\item[{\includegraphics{figures/X1/enemies/sprite_rushroader.png}}] \hypertarget{enem:Rush_Roader}{\textbf{Rush Roader}}: Leaders of the robot gang of hot-rodders. To get revenge on the Maverick Hunters who once chased them down, they became Sigma's subordinate.
 	
 	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_scraprobo.png}}] \hypertarget{enem:Scrap_Robo}{\textbf{Scrap Robo}}: A pathetic upper body of a robot, made to become a car driver. Although it passed part of the humans' expectations, without a driver's license, it has been turned into scrap.
 		
-	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_seaattacker.png}}] \hypertarget{enem:Sea_Attacker}{\textbf{Sea Attacker}}: Seahorse type mechaniloid created as a novelty for humans' homes. Its body somersaults as it charges.
+	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_seaattacker.png}}] \hypertarget{enem:Sea_Attacker}{\textbf{Sea Attacker}}: Seahorse-type mechaniloid created as a novelty for humans' homes. Its body somersaults as it charges.
 	
-	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_skyclaw.png}}] \hypertarget{enem:Sky_Claw}{\textbf{Sky Claw}}: A robot who removes obstacles, originally designed for the Crane Game" which was popular in Japan during the later half of the twentieth century.
+	\item[{\includegraphics[height=20px]{figures/X1/enemies/sprite_skyclaw.png}}] \hypertarget{enem:Sky_Claw}{\textbf{Sky Claw}}: A robot who removes obstacles, originally designed for the ``Crane Game'' which was popular in Japan during the later half of the twentieth century.
 	
 	\item[{\includegraphics{figures/X1/enemies/sprite_sinefaller.png}}] \hypertarget{enem:Sine_Faller}{\textbf{Sine Faller}}: Aerial mechaniloid made with the idea "Quality from quantity". It flies and turns, acting as a hindrance.
 	
@@ -153,58 +142,7 @@
 	\item[{\includegraphics{figures/X1/enemies/sprite_tombot.png}}] \hypertarget{enem:Tombot}{\textbf{Tombot}}:A dragonfly-type glider. When taking off, it cuts and releases the jet propulsion units. Then, slowly riding the wind, it flies through the sky.
 	
 	\item[{\includegraphics[width=20px]{figures/X1/enemies/sprite_turncannon.png}}] \hypertarget{enem:Turn_Cannon}{\textbf{Turn Cannon}}: Robot once designed as a sprinkler for domestic use, but was defective until the water was replaced with cannon shells.
-	
-=======
-	\item \hypertarget{enem:Amenhopper}{Amenhopper}
-	\item \hypertarget{enem:Armor_Soldier}{Armor Soldier}
-	\item \hypertarget{enem:Axe_Max}{Axe Max}
-	\item \hypertarget{enem:Ball_De_Voux}{Ball De Voux}
-	\item \hypertarget{enem:Batton_Bone}{Batton Bone}
-	\item \hypertarget{enem:Batton_M-501}{Batton M-501} 
-	\item \hypertarget{enem:Bomb_Been}{Bomb Been}
-	\item \hypertarget{enem:Crag_Man} {Crag Man}
-	\item \hypertarget{enem:Creeper} {Creeper}
-	\item \hypertarget{enem:Crusher}{Crusher}
-	\item \hypertarget{enem:Cruiziler}{Cruiziler}
-	\item \hypertarget{enem:Dig_Labour}{Dig Labour}
-	\item \hypertarget{enem:Dodge_Blaster}{Dodge Blaster}
-	\item \hypertarget{enem:Flamer}{Flamer} 
-	\item \hypertarget{enem:Flammingle}{Flammingle}
-	\item \hypertarget{enem:Gulpfer}{Gulpfer}
-	\item \hypertarget{enem:Gun_Volt}{Gun Volt}
-	\item \hypertarget{enem:Hoganmer}{Hoganmer}
-	\item \hypertarget{enem:Hotarion}{Hotarion}
-	\item \hypertarget{enem:Jamminger}{Jamminger}
-	\item \hypertarget{enem:Ladder_Yadder}{Ladder Yadder}
-	\item \hypertarget{enem:Lift Cannon}{Lift Cannon}
-	\item \hypertarget{enem:Mad_Pecker} {Mad Pecker}
-	\item \hypertarget{enem:Mega_Tortoise}{Mega Tortoise}
-	\item \hypertarget{enem:Metal_Wing}{Metal Wing}
-	\item \hypertarget{enem:Metall_C-15}{Metall C-15} 
-	\item \hypertarget{enem:Planty_Iworms} {Planty\&Iworms}
-	\item \hypertarget{enem:Ray_Bit}{Ray Bit}
-	\item \hypertarget{enem:Road_Attackers}{Road Attackers}
-	\item \hypertarget{enem:Rolling_Gabyoall}{Rolling Gabyoall}
-	\item \hypertarget{enem:Rush_Roader}{Rush Roader}
-	\item \hypertarget{enem:Scrap_Robo}{Scrap Robo}
-	\item \hypertarget{enem:Sea_Attacker}{Sea Attacker}
-	\item \hypertarget{enem:Sky_Claw}{Sky Claw}
-	\item \hypertarget{enem:Sine_Faller}{Sine Faller}
-	\item \hypertarget{enem:Slide_Cannon}{Slide Cannon}
-	\item \hypertarget{enem:Snow_Shooter}{Snow Shooter}
-	\item \hypertarget{enem:Spiky}{Spiky}
-	\item \hypertarget{enem:Tombot}{Tombot}
-	\item \hypertarget{enem:Turn_Cannon}{Turn Cannon}
-	
 
-
-
-
-
-
-
-
->>>>>>> 8fbb191aa7a4db2c0b8b92aaf47c931676d899b9
 \end{itemize}
 
 
